# tarotpedia.api

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yaml
api/: config.py  index.py
api/db/: __init__.py  crud.py  database.py  init_db.py  models.py
api/models/: __init__.py  llm.py  reading.py
api/modules/predict/: numerology.py  tarot.py
api/prompts/: numerology.py  tarot.py
docs/schema/: dbdiagram.dbml
